--- a/package.json
+++ b/package.json
@@ -11,15 +11,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.3.0",
+    "@angular/cdk": "^13.3.9",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
     "@angular/forms": "~13.3.0",
+    "@angular/material": "^13.3.9",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "angular-typing-animation": "^0.5.4",
+    "material-design-lite": "^1.3.0",
+    "ng-typed": "^1.2.0",
     "rxjs": "~7.5.0",
+    "t-writer.js": "^1.0.4",
     "tslib": "^2.3.0",
+    "typewriter-effect": "^2.19.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
