--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "angular-typing-animation": "^0.5.4",
+    "aos": "^3.0.0-beta.6",
     "material-design-lite": "^1.3.0",
     "ng-typed": "^1.2.0",
     "rxjs": "~7.5.0",
